- fix rullers shift (top, bottom right) - add check position margin left & right

--- a/src/blocks/post-carousel/editor.scss
+++ b/src/blocks/post-carousel/editor.scss
@@ -6,6 +6,11 @@
         overflow: hidden;
         height: 400px;
       }
+
+      .slick-arrow{
+         display: block !important;
+         opacity: 1 !important;
+      }
    }
 
 	.slick-dots{
